<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#b5c1db" >

     <LinearLayout
         android:id="@+id/linearLayout1_top_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="10dp" >

         <Button
             android:id="@+id/add_element"
             android:layout_width="71dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/ajout"
             android:text="@string/add_element_activity" />

         <Button
             android:id="@+id/remove_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/moins"
             android:text="@string/remove_element_activity" />

         <Button
             android:id="@+id/slot_element"
             android:layout_width="54dp"
             android:layout_height="49dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/importicon" />

         <Button
             android:id="@+id/save_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/save"
             android:onClick="sendMessage" />
     </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1_element_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1_top_bar"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1_top_bar" >

        <Spinner
            android:id="@+id/spinner_img_categori"
            android:layout_width="52dp"
            android:layout_height="38dp" />

        <EditText
            android:id="@+id/edit_name_produit"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_produit" />

        <Spinner
            android:id="@+id/spinner_nb_categori"
            android:layout_width="62dp"
            android:layout_height="34dp" />

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/quantity" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1_element_bar"
        android:layout_alignParentBottom="true" >

        <ListView
            android:id="@+id/listView_produit"
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:layout_marginBottom="29dp" >
        </ListView>
    </LinearLayout>
    
</RelativeLayout>