<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#b5c1db"
    tools:context=".Use_liste" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/cat_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cat_button" />

        <Button
            android:id="@+id/name_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name_button" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:text="@string/order_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="50dp" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="82dp"
            android:layout_height="48dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="123dp"
            android:layout_height="61dp"
            android:ems="10"
            android:hint="edit\é le texte"
            android:inputType="textMultiLine"
            android:lines="5" >

            <requestFocus android:layout_width="wrap_content" />

        </EditText>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2" >

    </ListView>

</RelativeLayout>